--- a/adminSide/createCategory.css
+++ b/adminSide/createCategory.css
@@ -158,8 +158,8 @@
     position: absolute;
     width: 49px;
     height: 24px;
-    left: 90vw;
-    top: 790px;
+    right: 56px;
+    top: 740px;
     padding-bottom: 30px;
     font-family: 'Inter';
     font-style: normal;
