--- a/adminSide/createItemExtra.css
+++ b/adminSide/createItemExtra.css
@@ -180,8 +180,8 @@
     position: absolute;
     width: 49px;
     height: 24px;
-    left: 90vw;
-    top: 760px;
+    right: 56px;
+    top: 740px;
     padding-bottom: 30px;
     font-family: 'Inter';
     font-style: normal;
