--- a/adminSide/createItemSuccess.css
+++ b/adminSide/createItemSuccess.css
@@ -176,7 +176,7 @@
     position: absolute;
     width: 49px;
     height: 24px;
-    left: 90vw;
+    right: 56px;
     top: 900px;
     padding-bottom: 30px;
     font-family: 'Inter';
