--- a/adminSide/Edit_Store_BusinessDetails.css
+++ b/adminSide/Edit_Store_BusinessDetails.css
@@ -30,7 +30,7 @@ body{
 
 
 .success-create-top{
-    margin-top: 40px;
+    margin-top: 10px;
     margin-left: 20px;
     display: flex;
     align-items: center;
@@ -292,6 +292,7 @@ input:focus{
     padding-right: 10px;
     font-family: 'inter', sans-serif;
     font-size: 16px;
+    outline: none;
 }
 
 .city_country_zip .city_input h2, .city_country_zip .country_input h2, .zip_input h2{
@@ -379,6 +380,27 @@ input:focus{
     color: #FFFFFF;
 }
 
+
+.mode{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    color: #656565;
+    margin-top: 20px;
+    padding-bottom: 0;
+}
+
+.mode p{
+    margin-left: 8px;
+}
+
+.mode img{
+    margin-top: 5px;
+}
 
 
 
