--- a/adminSide/adminDashboard.css
+++ b/adminSide/adminDashboard.css
@@ -348,7 +348,7 @@ header{
    
     background-color: #F8F5FA;
 
-    padding: 25px 56px 40px 56px;
+    padding: 25px 56px 20px 56px;
     margin-top: 100px;
     margin-left: 300px;
 }
@@ -430,15 +430,6 @@ header{
 /* ... RIGHT SECTION SMALL CARDS ... */
 
 .cards-container{
-    /* display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 25px;
-    padding-left: 60px;
-    padding-right: 70px;
-    padding-bottom: 30px; */
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
@@ -590,11 +581,6 @@ header{
 /* ... RIGHT SECTION BIG CARDS ... */
 
 .big-cards-container{
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    align-items: center; */
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -602,26 +588,11 @@ header{
     justify-content: center;
     align-items: center;
     margin-top: 30px;
-
-
-
-    
-    /* justify-content:; */
-    /* padding-top: 25px;
-    padding-left: 60px;
-    padding-right: 70px;
-    padding-bottom: 36px; */
-
-
-    
-    /* grid-template-columns: repeat(3, 327px); */
+    padding-bottom: 20px;
 
 }
 
 .big-card{
-    /* width: 360px; */
-    /* height: 254.73px; */
-
     height: fit-content;
     background: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(19, 0, 55, 0.1);
@@ -870,6 +841,34 @@ header{
 .big-card-active img{
     cursor: pointer;
 }
+
+
+.mode{
+    display: flex;
+    align-items:center;
+    justify-content: flex-end;
+    padding-bottom: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    color: #656565;
+    margin-top: 20px;
+}
+
+.mode p{
+    margin-left: 8px;
+}
+
+.mode img{
+    margin-top: 5px;
+}
+
+
+
+
+
+
 
 
 
