--- a/adminSide/createItem.css
+++ b/adminSide/createItem.css
@@ -179,15 +179,14 @@
     position: absolute;
     width: 49px;
     height: 24px;
-    left: 90vw;
-    top: 1120px;
+    right: 56px;
+    top: 1000px;
+    bottom: 10px;
     padding-bottom: 30px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
-    line-height: 24px;
-
     color: #656565;
 
 }
@@ -195,7 +194,9 @@
 .mode p{
     margin-left: 8px;
 }
-
+.mode img{
+    margin-top: 5px;
+}
 
 
 
