--- a/adminSide/create_custom_domain.css
+++ b/adminSide/create_custom_domain.css
@@ -78,9 +78,10 @@
     margin-left: 16px;
 }
 
+
+
 /* Path Heading */
 .path{
-    margin-top: 30px;
     display: flex;
     align-items: center;
 }
@@ -211,18 +212,16 @@ input:focus{
 .mode{
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    padding-bottom: 30px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
-    line-height: 24px;
     color: #656565;
-    margin-left: 54px;
-    margin-right: 5vw;
-    margin-top: 70px;
     cursor: pointer;
+
+    position: absolute;
+    right: 56px;
+    bottom: 10px;
 }
 
 .mode p{
