--- a/adminSide/edit_store_extra.css
+++ b/adminSide/edit_store_extra.css
@@ -29,7 +29,7 @@ body{
 
 
 .success-create-top{
-    margin-top: 40px;
+    margin-top: 10px;
     margin-left: 20px;
     display: flex;
     align-items: center;
@@ -346,7 +346,7 @@ input:focus{
 
 .right-bottom{
     margin-top: 71px;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
 }
 
 .right-bottom p{   
@@ -377,6 +377,27 @@ input:focus{
 
 
     color: #FFFFFF;
+}
+
+
+.mode{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    color: #656565;
+    margin-top: 20px;
+}
+
+.mode p{
+    margin-left: 8px;
+}
+
+.mode img{
+    margin-top: 5px;
 }
 
 
