--- a/adminSide/order_statistics.css
+++ b/adminSide/order_statistics.css
@@ -19,17 +19,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* margin-right: 60px; */
     padding-bottom: 16px;
     border-bottom: 1px solid #D2D2D2;
+}
 
-
-    /* width: 72vw; */
+.success-create-top-container div:nth-child(5) a{
+    color: #8130F3;;
 }
 
 
 .success-create-top{
-    margin-top: 40px;
+    margin-top: 10px;
     margin-left: 20px;
     display: flex;
     align-items: center;
@@ -45,7 +45,6 @@
     font-style: normal;
     font-weight: 500;
     font-size: 17px;
-    line-height: 24px;
     padding-left: 8px;
     color: #000000;
     width: fit-content;
@@ -58,8 +57,6 @@
     font-style: normal;
     font-weight: 500;
     font-size: 17px;
-    line-height: 24px;
-    padding-left: 8px;
     color: #000000;
     width: fit-content;
 }
@@ -82,8 +79,16 @@
     color: #000000;
 }
 
-.store-created-title{
+
+.store_title_and_carlender{
     margin-top: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.store-created-title{
+   
 }
 
 .store-created-title .store-title{
@@ -113,106 +118,147 @@
 
 }
 
+.store_title_and_carlender .carlender{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-
-.dashboard-Store{
-   display: flex;
-   align-items: center;
-   margin-top: 35px;
+    width: 300px;
+    height: 60px;
+    background: #D9D9D9;
+    border-radius: 10px;
+    padding: 0 12px;
 }
 
-.dashboard-Store p{
+.store_title_and_carlender .carlender img{
+    margin-right: 8px;
+    width: 16px;
+}
+
+.store_title_and_carlender .carlender p{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
-    /* identical to box height */
-    padding-right: 8px;
     color: #000000;
 }
 
+/* ... GRAPH ... */
+.graph_container{
+    margin-top: 40px;
+    height: 574px;
 
-
-.right-middle{
-    padding-left: 0px;
-    margin-top: 30px;
-}
-
-.right-middle h2{
-    width: fit-content;
-}
-
-.right-middle .line2{
-   
-    margin-left: 14px;
-}
-
-.right-middle a{
-    margin-left: 30px;
-    width: 180px;
-}
-
-
-
-.person-sitting-container{
-    height: 400px;
-    /* background-color: aqua; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 60px;
-
-        
-    background: rgba(255, 255, 255, 0.5);
+    background: #FFFFFF;
     border: 0.843511px solid rgba(19, 0, 55, 0.1);
-    border-radius: 16.8702px;
+    border-radius: 16px;
 }
 
-.person-sitting-container .para1{
+.item_details_container{
+    margin-top: 60px;
+    margin-bottom: 30px;
+    background: #FFFFFF;
+    border: 0.804054px solid rgba(19, 0, 55, 0.1);
+    border-radius: 16px;
+
+    padding: 40px 60px 40px 30px;
+}
+
+.item_details_container .details_heading{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.item_details_container .details_heading h2{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 16.8702px;
-    line-height: 20px;
-
+    font-size: 16px;
     color: #000000;
-
 }
 
-.person-sitting-container .para2{
+.item_details_container .details_heading p{
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 500;
-    font-size: 13.4962px;
-    line-height: 16px;
-    margin-top: 10px;
-    color: #000000;
-
-}
-
-.mode{
-    display: flex;
-    align-items: center;
-    position: absolute;
-    width: 49px;
-    height: 24px;
-    left: 90vw;
-    top: 900px;
-    padding-bottom: 30px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-
+    font-weight: 400;
+    font-size: 14px;
     color: #656565;
 
 }
 
+.item_details_container .details_heading img{
+    width: 18px;
+}
+
+.item_details_container .details_body{
+
+}
+
+
+.item_details_container .item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-top: 40px;
+}
+
+.item_details_container .item .item_name{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #000000;
+
+}
+
+
+.item_details_container .item .item_price_and_orders{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 160px;
+}
+
+.item_details_container .item .item_price_and_orders .item_price, .item_details_container .item .item_price_and_orders .item_orders{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #000000;
+
+}
+
+
+ 
+
+
+
+
+
+
+
+
+
+.mode{
+    display: flex;
+    align-items:center;
+    justify-content: flex-end;
+    padding-bottom: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    color: #656565;
+    margin-top: 20px;
+}
+
 .mode p{
     margin-left: 8px;
+}
+
+.mode img{
+    margin-top: 5px;
 }
 
 
