--- a/adminSide/socials.css
+++ b/adminSide/socials.css
@@ -23,14 +23,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* margin-right: 60px; */
     padding-bottom: 16px;
     border-bottom: 1px solid #D2D2D2;
 }
 
 
 .success-create-top{
-    margin-top: 40px;
+    margin-top: 10px;
     margin-left: 20px;
     display: flex;
     align-items: center;
@@ -81,7 +80,6 @@ body{
 /* Nav Buttons */
 .nav-btns{
    margin-top: 35px;
-   padding-right: 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
@@ -296,6 +294,29 @@ input:focus{
 
     color: #FFFFFF;
 }
+
+
+
+.mode{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    color: #656565;
+    margin-top: 40px;
+}
+
+.mode p{
+    margin-left: 8px;
+}
+
+.mode img{
+    margin-top: 5px;
+}
+
 
 
 
