--- a/adminSide/adminDashboard.css
+++ b/adminSide/adminDashboard.css
@@ -443,12 +443,11 @@ header{
     background: rgba(255, 255, 255, 0.5);
     border: 1px solid rgba(19, 0, 55, 0.1);
     border-radius: 20px;
-
+    box-shadow: 0 5px 10px rgba(0, 0, 10, 0.1);
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-left: 30px;
-    /* margin-right: 20px; */
     margin-top: 20px;
 
 }
@@ -465,8 +464,6 @@ header{
 }
 
 .cards-container .card .box2{
-    /* width: 73px;
-    height: 75px; */
 
     width: 60px;
     height: 60px;
@@ -520,13 +517,6 @@ header{
 
     display: flex;
     align-items: center;
-
-
-    /* padding-left: 60px;
-    padding-right: 70px; */
-
-    
-    /* width: 72vw; */
    
 }
 
@@ -599,7 +589,7 @@ header{
     border-radius: 15.8528px;
     padding: 25px 26px 0px 30px;
     position: relative;
-    
+    box-shadow: 0 5px 10px rgba(0, 0, 10, 0.1);
 }
 
 
